WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276273
[Writing Tools] Smart replies are not inserted into Mail
https://bugs.webkit.org/show_bug.cgi?id=276273
Summary
[Writing Tools] Smart replies are not inserted into Mail
Richard Robinson
Reported
2024-07-05 16:07:40 PDT
rdar://131083006
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2024-07-05 16:16:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30535
EWS
Comment 2
2024-07-05 17:01:36 PDT
Committed
280703@main
(f86d3400c875): <
https://commits.webkit.org/280703@main
> Reviewed commits have been landed. Closing PR #30535 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug