Source/WebCore/page/writing-tools/WritingToolsController.h
@@ -87,6 +87,7 @@ private:
         // These two vectors should never have the same command in both of them.
         Vector<Ref<WritingToolsCompositionCommand>> unappliedCommands;
         Vector<Ref<WritingToolsCompositionCommand>> reappliedCommands;
+        bool hasReceivedText { false };
     };
 
     struct ProofreadingState : CanMakeCheckedPtr<ProofreadingState> {
